k8s-manifests/wireguard/wireguard.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wireguard-ui
  namespace: default
  labels:
    app: wireguard-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wireguard-ui
  template:
    metadata:
      labels:
        app: wireguard-ui
    spec:
      volumes:
        - name: wireguard-config
          emptyDir: {}
      # Init container sets IP forwarding without triggering GKE SysctlForbidden
      containers:
        # 1. WireGuard Server Container
        - name: wireguard-server
          image: linuxserver/wireguard:latest
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
                - SYS_MODULE
          ports:
            - containerPort: 51820
              name: wireguard-udp
              protocol: UDP
          volumeMounts:
            - name: wireguard-config
              mountPath: /etc/wireguard

        # 2. WireGuard Web UI Container
        - name: wireguard-ui
          image: ngoduykhanh/wireguard-ui:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
              name: http
          volumeMounts:
            - name: wireguard-config
              mountPath: /etc/wireguard
